[gd_scene load_steps=19 format=3 uid="uid://c4u5gk5n2aiom"]

[ext_resource type="Script" path="res://InfiniteCanvas/InfiniteCanvas.gd" id="1"]
[ext_resource type="Script" path="res://InfiniteCanvas/PanZoomCamera.gd" id="2"]
[ext_resource type="Curve" uid="uid://bgd7v60kyywsk" path="res://InfiniteCanvas/default_pressure_curve.tres" id="3"]
[ext_resource type="PackedScene" uid="uid://cf3j2vavqos04" path="res://InfiniteCanvas/Cursor/BrushCursor/BrushCursor.tscn" id="4"]
[ext_resource type="Script" path="res://InfiniteCanvas/Tools/BrushTool.gd" id="5"]
[ext_resource type="Script" path="res://InfiniteCanvas/Tools/LineTool.gd" id="6"]
[ext_resource type="Script" path="res://InfiniteCanvas/Tools/SelectionTool.gd" id="7"]
[ext_resource type="PackedScene" path="res://InfiniteCanvas/Cursor/SelectionCursor/SelectionCursor.tscn" id="8"]
[ext_resource type="Script" path="res://InfiniteCanvas/Tools/SelectionRectangle.gd" id="9"]
[ext_resource type="Script" path="res://InfiniteCanvas/Tools/TextBoxTool.gd" id="9_yqcq5"]
[ext_resource type="Shader" path="res://InfiniteCanvas/Tools/selection_rectangle.gdshader" id="10"]
[ext_resource type="PackedScene" uid="uid://ccl05i282g120" path="res://TextBox/TextBox2.tscn" id="10_gdd0v"]
[ext_resource type="Script" path="res://InfiniteCanvas/Tools/RectangleTool.gd" id="11"]
[ext_resource type="Script" path="res://InfiniteCanvas/InfiniteCanvasGrid.gd" id="12"]
[ext_resource type="Script" path="res://InfiniteCanvas/Tools/CircleTool.gd" id="13"]
[ext_resource type="Script" path="res://InfiniteCanvas/Tools/EraserTool.gd" id="14"]
[ext_resource type="Script" path="res://InfiniteCanvas/DebugDraw.gd" id="15"]

[sub_resource type="ShaderMaterial" id="1"]
shader = ExtResource("10")
shader_parameter/background_color = null

[node name="InfiniteCanvas" type="SubViewportContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="TextBoxEditor" parent="." instance=ExtResource("10_gdd0v")]
layout_mode = 2

[node name="BrushTool" type="Node" parent="."]
script = ExtResource("5")
pressure_curve = ExtResource("3")
cursor_path = NodePath("../SubViewport/BrushCursor")

[node name="RectangleTool" type="Node" parent="."]
script = ExtResource("11")
pressure_curve = ExtResource("3")
cursor_path = NodePath("../SubViewport/BrushCursor")

[node name="CircleTool" type="Node" parent="."]
script = ExtResource("13")
pressure_curve = ExtResource("3")
cursor_path = NodePath("../SubViewport/BrushCursor")

[node name="EraserTool" type="Node" parent="."]
script = ExtResource("14")
cursor_path = NodePath("../SubViewport/BrushCursor")

[node name="LineTool" type="Node" parent="."]
script = ExtResource("6")
pressure_curve = ExtResource("3")
cursor_path = NodePath("../SubViewport/BrushCursor")

[node name="SelectionTool" type="Node" parent="."]
script = ExtResource("7")
selection_rectangle_path = NodePath("../SubViewport/SelectionRectangle")
cursor_path = NodePath("../SubViewport/SelectionCursor")

[node name="TextBoxTool" type="Node" parent="."]
script = ExtResource("9_yqcq5")
_textBox = ExtResource("10_gdd0v")
cursor_path = NodePath("../SubViewport/SelectionCursor")

[node name="SubViewport" type="SubViewport" parent="."]
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="Camera2D" type="Camera2D" parent="SubViewport"]
anchor_mode = 0
script = ExtResource("2")

[node name="Grid" type="Node2D" parent="SubViewport"]
script = ExtResource("12")
camera_path = NodePath("../Camera2D")

[node name="Strokes" type="Node2D" parent="SubViewport"]

[node name="DebugDraw" type="Node2D" parent="SubViewport"]
script = ExtResource("15")

[node name="SelectionRectangle" type="Node2D" parent="SubViewport"]
material = SubResource("1")
script = ExtResource("9")

[node name="BrushCursor" parent="SubViewport" instance=ExtResource("4")]

[node name="SelectionCursor" parent="SubViewport" instance=ExtResource("8")]

[node name="TextBoxes" type="Control" parent="SubViewport"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 1

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="textBox_cancel" from="TextBoxEditor" to="." method="_on_text_box_editor_text_box_cancel"]
[connection signal="textBox_ok" from="TextBoxEditor" to="." method="_on_text_box_editor_text_box_ok"]
[connection signal="show_textBoxDialog" from="TextBoxTool" to="." method="_on_text_box_tool_show_text_box_dialog"]
[connection signal="text_box_tool_reset" from="TextBoxTool" to="." method="_on_text_box_tool_text_box_tool_reset"]
